--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             border-radius: 5%;
             width: 25%;
             height: 22.4%;
-            border: 5px solid var(--church-gold);
+            border: 4px solid var(--church-gold);
             z-index: 2;
             overflow: hidden;
             box-shadow: 3 6 15px rgba(212, 175, 55, 0.5);
@@ -1541,7 +1541,7 @@
                     logging: false
                 }).then(canvas => {
                     const link = document.createElement('a');
-                    link.download = `digerati-event-pass-${userNames[0] || 'guest'}.png`;
+                    link.download = `DunamisChurchBnarda-event-pass-${userNames[0] || 'guest'}.png`;
                     link.href = canvas.toDataURL('image/png');
                     link.click();
                 });
